referencing secrets in command

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,5 +4,6 @@ pipeline:
     commands:
       #- env
       #- export
-      - echo $$NAME
+      - export MYANME=$NAME
+      - echo $${MYNAME}
     secrets: [ NAME ]
