--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,11 @@
 pipeline:
-  echoname:
+  build:
     image: alpine
     commands:
-      - export MYNAME=$NAME
-      - echo $${MYNAME}
+      #- export MYNAME=$NAME
+      #- echo $${MYNAME}
+      - apk update
+      - apk add py-pip
+      - pip install awscli
+      - aws s3 ls
     secrets: [ NAME ]
