--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ pipeline:
   build:
     image: alpine
     commands:
-      - export MYNAME=$NAME
+      - export MYNAME=$name
       - echo $${MYNAME}
   #    - apk update
   #    - apk add py-pip
