added scp drone plugin in .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,7 @@ pipeline:
     volumes:
       - /root/scp/config:/root/.ssh/config
       - /root/.ssh/id_rsa:/root/.ssh/id_rsa 
+    privileged: true
 
   #build:
   #  image: alpine
