added s3 publish zip

--- a/.drone.yml
+++ b/.drone.yml
@@ -5,3 +5,9 @@ pipeline:
       - apk update
       - apk add zip
       - zip cargill.zip cargill.py
+  s3publish:
+    image: plugins/s3
+    region: ap-south-1
+    bucket: my-sandeep-state
+    source: cargill.zip
+    target: /
