added s3 publish zip

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,10 +4,17 @@ pipeline:
     commands:
       - apk update
       - apk add zip
-      - zip cargill.zip cargill.py
+      - zip cargill-${DRONE_BUILD_NUMBER}.zip cargill.py
+
   s3publish:
     image: plugins/s3
     region: ap-south-1
     bucket: my-sandeep-state
-    source: cargill.zip
+    source: cargill-${DRONE_BUILD_NUMBER}.zip
     target: /
+
+  deploylambda:
+    image: omerxx/drone-lambda-plugin
+    function_name: drone
+    s3_bucket: my-sandeep-state
+    file_name: cargill-${DRONE_BUILD_NUMBER}.zip
