--- a/.drone.yml
+++ b/.drone.yml
@@ -18,4 +18,4 @@ pipeline:
     function_name: drone
     s3_bucket: my-sandeep-state
     file_name: cargill-${DRONE_BUILD_NUMBER}.zip
-    secrets: [ AWS_DEFAULT_REGION ]
+    secrets: [ aws_default_region ]
