--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ pipeline:
 
   s3publish:
     image: plugins/s3
-    #region: ap-south-1
+    region: ${AWS_REGION}
     bucket: my-sandeep-state
     source: cargill-${DRONE_BUILD_NUMBER}.zip
     target: /
