update .drone.yml file

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,17 +1,22 @@
 pipeline:
-  makezip:
-    image: alpine
-    commands:
-      - apk update
-      - apk add zip
-      - zip cargill-${DRONE_BUILD_NUMBER}.zip cargill.py
+  #makezip:
+  #  image: alpine
+  #  commands:
+  #    - apk update
+  #    - apk add zip
+  #    - zip cargill-${DRONE_BUILD_NUMBER}.zip cargill.py
 
   s3publish:
     image: alpineaws
     #region: $${AWS_REGION}
     bucket: my-sandeep-state
-    source: cargill-${DRONE_BUILD_NUMBER}.zip
-    target: cargill-${DRONE_BUILD_NUMBER}.zip
+    #source: cargill-${DRONE_BUILD_NUMBER}.zip
+    source: cargill.py
+    #target: cargill-${DRONE_BUILD_NUMBER}.zip
+    target: cargill.py
+    when:
+      event: deployment
+      environment: production
     #secrets: [ AWS_DEFAULT_REGION ]
 
   #deploylambda:
