--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,10 @@
 pipeline:
-  #makezip:
-  #  image: alpine
-  #  commands:
-  #    - apk update
-  #    - apk add zip
-  #    - zip cargill-${DRONE_BUILD_NUMBER}.zip cargill.py
+  makezip:
+    image: alpine
+    commands:
+      - apk update
+      - apk add zip
+      - zip cargill-${DRONE_BUILD_NUMBER}.zip cargill.py
 
   #s3publish:
   #  image: alpineaws
