--- a/.drone.yml
+++ b/.drone.yml
@@ -4,3 +4,9 @@ pipeline:
     image: alpine
     commands:
       - echo step 1
+  step2:
+    image: alpine
+    commands:
+      - echo step 2
+    when:
+      status: [ success ]
