--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,8 @@
 ---
 pipeline:
   step1:
-    image: alpine
+    image: drone-plugin
     secrets: [ NAME ]
-    commands:
-      - env
     #cmd:i
     #  - testing
     #  - sandeep
